# curso-django-projeto1

./: .gitignore  db.sqlite3  pyproject.toml  pytest.ini
core/global/: base.html
core/global/partials/: head.html
project/: settings.py
projeto/: settings.py
recipes/: models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_auto_20220302_1436.py  0003_alter_recipe_preparation_steps.py  0004_remove_recipe_preparation_steps_is_html.py
recipes/templates/global/: base.html
recipes/templates/recipes/: home.html
recipes/templates/recipes/pages/: category.html  home.html  recipe-view.html
recipes/templates/recipes/partials/: footer.html  head.html  header.html  recipe.html  search.html
recipes/tests/: test_recipe_views.py
