[tool.poetry]
name = "Recipes"
version = "1.0.0"
description = ""
authors = ["Ariel Mesquita <arielmesquita@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3"
Pillow = "^9.0.1"
django-ckeditor = "^6.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
mypy = "^0.931"
pytest = "^7.0.1"
pep8 = "^1.7.1"
pylint = "^2.12.2"
pylint-django = "^2.5.2"
Faker = "^13.0.0"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
